Tell BUILD to run maliput_obj_gtest as a test.

--- a/drake/automotive/maliput/BUILD
+++ b/drake/automotive/maliput/BUILD
@@ -30,7 +30,7 @@ cc_test(
     size = "small",
     )
 
-cc_binary(
+cc_test(
     name = "maliput_obj_gtest",
     srcs = [
         "utility/test/test_generate_obj.cc",
