WIP: beginnings of ayaml loader for monolane.

--- a/drake/automotive/maliput/utility/CMakeLists.txt
+++ b/drake/automotive/maliput/utility/CMakeLists.txt
@@ -2,3 +2,6 @@ add_subdirectory(test)
 drake_install_headers(
   generate_obj.h
   )
+
+add_executable(yaml_to_obj yaml_to_obj.cc)
+target_link_libraries(yaml_to_obj drakeAutomotive yaml-cpp)
