maliput: port test rules to match the style of #3634 and friends.

--- a/drake/automotive/maliput/monolane/test/CMakeLists.txt
+++ b/drake/automotive/maliput/monolane/test/CMakeLists.txt
@@ -1,12 +1,8 @@
-add_executable(hodgepodge hodgepodge.cc)
-target_link_libraries(hodgepodge ${GTEST_BOTH_LIBRARIES} drakeAutomotive)
-drake_add_test(NAME hodgepodge COMMAND hodgepodge)
+drake_add_cc_test(hodgepodge)
+target_link_libraries(hodgepodge drakeAutomotive)
 
-add_executable(monolane_lanes_test monolane_lanes_test.cc)
-target_link_libraries(monolane_lanes_test ${GTEST_BOTH_LIBRARIES} drakeAutomotive)
-drake_add_test(NAME monolane_lanes_test COMMAND monolane_lanes_test)
+drake_add_cc_test(monolane_lanes_test)
+target_link_libraries(monolane_lanes_test drakeAutomotive)
 
-add_executable(monolane_mathiness_test monolane_mathiness_test.cc)
-target_link_libraries(
-  monolane_mathiness_test ${GTEST_BOTH_LIBRARIES} drakeAutomotive)
-drake_add_test(NAME monolane_mathiness_test COMMAND monolane_mathiness_test)
+drake_add_cc_test(monolane_mathiness_test)
+target_link_libraries(monolane_mathiness_test drakeAutomotive)
