--- a/drake/automotive/maliput/utility/double_ring.yaml
+++ b/drake/automotive/maliput/utility/double_ring.yaml
@@ -5,6 +5,8 @@ maliput_monolane_builder:
   id: fig8
   lane_bounds: [-2, 2]
   driveable_bounds: [-4, 4]
+  position_precision: .01
+  orientation_precision: 0.5
   points:
     start:
       xypoint: [0, 0, 45]  # x,y, heading
