--- a/drake/automotive/maliput/utility/tee_intersection.yaml
+++ b/drake/automotive/maliput/utility/tee_intersection.yaml
@@ -5,6 +5,8 @@ maliput_monolane_builder:
   id: tee_intersection
   lane_bounds: [-2, 2]
   driveable_bounds: [-4, 4]
+  position_precision: .01
+  orientation_precision: 0.5
   points:
     start:
       xypoint: [0, 45, 0]  # x,y, heading
