--- a/drake/automotive/CMakeLists.txt
+++ b/drake/automotive/CMakeLists.txt
@@ -24,6 +24,7 @@ add_library_with_exports(LIB_NAME drakeAutomotive SOURCE_FILES
   maliput/monolane/road_geometry.cc
   maliput/monolane/segment.cc
   maliput/utility/generate_obj.cc
+  maliput/utility/generate_urdf.cc
   simple_car.cc
   trajectory_car.cc
   )
