--- a/drake/automotive/maliput/utility/CMakeLists.txt
+++ b/drake/automotive/maliput/utility/CMakeLists.txt
@@ -1,6 +1,7 @@
 add_subdirectory(test)
 drake_install_headers(
   generate_obj.h
+  generate_urdf.h
   )
 
 add_executable(yaml_to_obj yaml_to_obj.cc)
