In monolane/loader, adapt better to "forced_end --> explicit_end" API change (change the YAML syntax, too), and set up to resolve "xxx.start" in addition to "xxx.end".
In InfiniteCircuitRoad, walk lanes end-to-end correctly.

--- a/drake/automotive/maliput/utility/fig8.yaml
+++ b/drake/automotive/maliput/utility/fig8.yaml
@@ -43,7 +43,4 @@ maliput_monolane_builder:
     7:
       start: "connections.6.end"
       length: 50
-      z_end: [0, 0, 0, 0]
-    
-        
-  
+      explicit_end: "connections.0.start"
