--- a/drake/automotive/CMakeLists.txt
+++ b/drake/automotive/CMakeLists.txt
@@ -7,7 +7,9 @@ endif()
 add_library_with_exports(LIB_NAME drakeAutomotive SOURCE_FILES
   create_trajectory_params.cc
   curve2.cc
+  endless_road_car.cc
   gen/driving_command.cc
+  gen/endless_road_car_state.cc
   gen/euler_floating_joint_state.cc
   gen/idm_with_trajectory_agent_parameters.cc
   gen/idm_with_trajectory_agent_state.cc
@@ -39,6 +41,8 @@ pods_install_libraries(drakeAutomotive)
 drake_install_headers(
   create_trajectory_params.h
   curve2.h
+  endless_road_car.h
+  endless_road_car-inl.h
   idm_with_trajectory_agent.h
   simple_car.h
   simple_car_to_euler_floating_joint.h
@@ -58,6 +62,7 @@ if(lcm_FOUND)
   add_library_with_exports(LIB_NAME drakeAutomotiveLcm SOURCE_FILES
     automotive_simulator.cc
     gen/driving_command_translator.cc
+    gen/endless_road_car_state_translator.cc
     gen/euler_floating_joint_state_translator.cc
     gen/idm_with_trajectory_agent_state_translator.cc
     gen/simple_car_config_translator.cc
