Provide geometry_api::RoadGeometry with accessors for linear and angular tolerance. Change spelling to "tolerance" from "precision" in a number of places. Provide geometry_api::RoadGeometry with a CheckInvariants() method (and implementation) which checks API-proscribed invariants --- most importantly, C1 continuity at all branch-points (with the tolerances declared by the RoadGeometry). Exercise CheckInvariants() in monolane::Builder, and in unit-tests.

--- a/drake/automotive/CMakeLists.txt
+++ b/drake/automotive/CMakeLists.txt
@@ -18,6 +18,7 @@ add_library_with_exports(LIB_NAME drakeAutomotive SOURCE_FILES
   gen/simple_car_config.cc
   gen/simple_car_state.cc
   idm_with_trajectory_agent.cc
+  maliput/geometry_api/road_geometry.cc
   maliput/monolane/arc_lane.cc
   maliput/monolane/branch_point.cc
   maliput/monolane/builder.cc
