Add a section to YAML syntax for creating named groups (e.g., to invoke Builder::AddGroup()).  Provide tee_intersection.yaml and village.yaml with group specifications.

--- a/drake/automotive/maliput/utility/tee_intersection.yaml
+++ b/drake/automotive/maliput/utility/tee_intersection.yaml
@@ -42,3 +42,5 @@ maliput_monolane_builder:
       start: "reverse connections.east.start"
       length: 20
       explicit_end: "connections.west.start"
+  groups:
+    tee: [south_west, south_east, east_west]
