Use drake_install_pkg_config_file

--- a/drake/examples/Atlas/CMakeLists.txt
+++ b/drake/examples/Atlas/CMakeLists.txt
@@ -4,10 +4,8 @@ drake_install_headers(
         atlasUtil.h
         atlas_plant.h
         )
-pods_install_pkg_config_file(drake-atlas-util
-  LIBS -ldrakeAtlasUtil
-  REQUIRES
-  VERSION 0.0.1)
+drake_install_pkg_config_file(drake-atlas-util
+  LIBS -ldrakeAtlasUtil)
 
 if (lcm_FOUND)
   add_executable(atlas_dynamics_demo atlas_dynamics_demo.cc atlas_plant.cc)
