--- a/drake/examples/Pendulum/CMakeLists.txt
+++ b/drake/examples/Pendulum/CMakeLists.txt
@@ -8,10 +8,11 @@ if(lcm_FOUND)
     drakeTrajectoryOptimization)
   pods_install_libraries(drakePendulumPlant)
   drake_install_headers(pendulum_plant.h pendulum_swing_up.h)
-  pods_install_pkg_config_file(drake-pendulum-system
+  drake_install_pkg_config_file(drake-pendulum-system
     LIBS -ldrakePendulumPlant
     REQUIRES
-    VERSION 0.0.1)
+      drake-dynamic-constraint
+      drake-trajectory-optimization)
 
   add_executable(pendulum_run_dynamics pendulum_run_dynamics.cc)
   target_link_libraries(pendulum_run_dynamics
