--- a/drake/examples/bouncing_ball/CMakeLists.txt
+++ b/drake/examples/bouncing_ball/CMakeLists.txt
@@ -17,10 +17,11 @@ drake_install_headers(
   ball-inl.h
   ball.h
   )
-pods_install_pkg_config_file(drake-bouncing-ball
+drake_install_pkg_config_file(drake-bouncing-ball
   LIBS -ldrakeBouncingBall
   REQUIRES
-  VERSION 0.0.1)
+    drake-common
+    drake-system-framework)
 
 drake_add_matlab_test(NAME examples/bouncing_ball/BallPlant2D.run
   COMMAND BallPlant2D.run)
