--- a/drake/multibody/CMakeLists.txt
+++ b/drake/multibody/CMakeLists.txt
@@ -2,10 +2,9 @@ add_library_with_exports(LIB_NAME drakeXMLUtil SOURCE_FILES xmlUtil.cpp)
 target_link_libraries(drakeXMLUtil drakeCommon tinyxml2 spruce)
 pods_install_libraries(drakeXMLUtil)
 drake_install_headers(xmlUtil.h)
-pods_install_pkg_config_file(drake-xml-util
-  LIBS -ldrakeXMLUtil -ldrakeCommmon -ltinyxml2 -lspruce
-  REQUIRES
-  VERSION 0.0.1)
+drake_install_pkg_config_file(drake-xml-util
+  LIBS -ldrakeXMLUtil -ltinyxml2 -lspruce
+  REQUIRES drake-common)
 
 add_library_with_exports(LIB_NAME drakeRBM SOURCE_FILES
   parser_model_instance_id_table.cc
@@ -41,10 +40,13 @@ drake_install_headers(
   rigid_body_loop.h
   rigid_body_tree_construction.h)
 
-pods_install_pkg_config_file(drake-rbm
-  LIBS -ldrakeRBM -ldrakeCollision -ldrakeJoints -ldrakeXMLUtil
+drake_install_pkg_config_file(drake-rbm
+  LIBS -ldrakeRBM
   REQUIRES
-  VERSION 0.0.1)
+    drake-collision
+    drake-common
+    drake-joints
+    drake-xml-util)
 
 add_library_with_exports(LIB_NAME drakeIKoptions SOURCE_FILES ik_options.cc)
 target_link_libraries(drakeIKoptions drakeRBM)
@@ -65,10 +67,12 @@ pods_install_libraries(drakeIK)
 pods_install_libraries(drakeIKoptions)
 drake_install_headers(constraint_wrappers.h ik_trajectory_helper.h ik_options.h
   inverse_kinematics_backend.h rigid_body_ik.h)
-pods_install_pkg_config_file(drake-ik
-  LIBS -ldrakeIK -ldrakeRigidBodyConstraint -ldrakeIKoptions
-  REQUIRES drake-rbm
-  VERSION 0.0.1)
+drake_install_pkg_config_file(drake-ik
+  LIBS -ldrakeIK -ldrakeIKoptions
+  REQUIRES
+    drake-optimization
+    drake-rbm
+    drake-rigid-body-constraint)
 
 add_subdirectory(collision)
 add_subdirectory(constraint)
