--- a/drake/multibody/joints/CMakeLists.txt
+++ b/drake/multibody/joints/CMakeLists.txt
@@ -21,8 +21,7 @@ drake_install_headers(
         revolute_joint.h
         roll_pitch_yaw_floating_joint.h
         floating_base_types.h)
-pods_install_pkg_config_file(drake-joints
+drake_install_pkg_config_file(drake-joints
   LIBS -ldrakeJoints
-  REQUIRES
-  VERSION 0.0.1)
+  REQUIRES drake-geometry-util)
 add_subdirectory(test)
