--- a/drake/multibody/rigid_body_system1/CMakeLists.txt
+++ b/drake/multibody/rigid_body_system1/CMakeLists.txt
@@ -3,11 +3,14 @@ target_link_libraries(drakeRBSystem drakeRBM drakeOptimization drakeRigidBodyCon
 
 drake_install_headers(RigidBodySystem.h)
 pods_install_libraries(drakeRBSystem)
-pods_install_pkg_config_file(drake-rbsystem
+drake_install_pkg_config_file(drake-rbsystem
   CFLAGS -I${CMAKE_INSTALL_PREFIX}/include
-  LIBS -ldrakeRBSystem -ldrakeRBM -ldrakeOptimization -ldrakeRigidBodyConstraint
-  -ldrakeIK
-  VERSION 0.0.1)
+  LIBS -ldrakeRBSystem
+  REQUIRES
+    drake-ik
+    drake-optimization
+    drake-rbm
+    drake-rigid-body-constraint)
 
 if (lcm_FOUND)
   add_executable(rigidBodyLCMNode rigidBodyLCMNode.cpp)
