--- a/drake/system1/CMakeLists.txt
+++ b/drake/system1/CMakeLists.txt
@@ -18,8 +18,9 @@ if(lcm_FOUND)
 
   pods_install_libraries(drakeLCMSystem)
   drake_install_headers(LCMSystem.h)
-  pods_install_pkg_config_file(drake-lcm-system
+  drake_install_pkg_config_file(drake-lcm-system
     LIBS -ldrakeLCMSystem
-    REQUIRES lcm
-    VERSION 0.0.1)
+    REQUIRES
+      drake-lcm-types
+      lcm)
 endif()
