--- a/drake/systems/controllers/CMakeLists.txt
+++ b/drake/systems/controllers/CMakeLists.txt
@@ -5,21 +5,25 @@ add_library_with_exports(LIB_NAME drakeControlUtil SOURCE_FILES controlUtil.cpp)
 target_link_libraries(drakeControlUtil drakeRBM drakeTrajectories)
 pods_install_libraries(drakeControlUtil)
 drake_install_headers(controlUtil.h)
-pods_install_pkg_config_file(drake-control-util
-  LIBS -ldrakeControlUtil
-  REQUIRES
-  VERSION 0.0.1)
+drake_install_pkg_config_file(drake-control-util
+  LIBS -ldrakeControlUtil)
 
 if(gurobi_FOUND AND lcm_FOUND AND yaml-cpp_FOUND)
   add_library_with_exports(LIB_NAME drakeQPCommon SOURCE_FILES InstantaneousQPController.cpp)
   target_link_libraries(drakeQPCommon drakeControlUtil drakeQP drakeTrajectories drakeLCMUtil drakeSide drakeYAMLUtil lcm)
   pods_install_libraries(drakeQPCommon)
   drake_install_headers(QPCommon.h InstantaneousQPController.h)
-  pods_install_pkg_config_file(drake-qp-common
+  drake_install_pkg_config_file(drake-qp-common
     LIBS -ldrakeQPCommon
     CFLAGS -I\${prefix}/include/lcmtypes
-    REQUIRES drake-control-util
-    VERSION 0.0.1)
+    REQUIRES
+      drake-control-util
+      drake-lcm-util
+      drake-qp
+      drake-side
+      drake-trajectories
+      drake-yaml-util
+      lcm)
 
   pods_find_pkg_config(bot2-lcmgl-client)
   if(bot2-lcmgl-client_FOUND)
@@ -33,10 +37,8 @@ add_library_with_exports(LIB_NAME drakeZMPUtil SOURCE_FILES zmpUtil.cpp)
 target_link_libraries(drakeZMPUtil drakeTrajectories)
 pods_install_libraries(drakeZMPUtil)
 drake_install_headers(zmpUtil.h)
-pods_install_pkg_config_file(drake-zmp-util
-  LIBS -ldrakeZMPUtil
-  REQUIRES
-  VERSION 0.0.1)
+drake_install_pkg_config_file(drake-zmp-util
+  LIBS -ldrakeZMPUtil)
 
 # System 2 controllers
 set(system2_sources
@@ -58,10 +60,11 @@ target_link_libraries(drakeSystemControllers
 drake_install_headers(${system2_installed_headers})
 
 pods_install_libraries(drakeSystemControllers)
-pods_install_pkg_config_file(drake-system2-controllers
-    LIBS -ldrakeSystem2Controllers -ldrakeSystemFramework -ldrakeRBM
+drake_install_pkg_config_file(drake-system2-controllers
+    LIBS -ldrakeSystem2Controllers
     REQUIRES
-    VERSION 0.0.1)
+      drake-rbm
+      drake-system-framework)
 
 if(BUILD_TESTING)
   add_subdirectory(test)
