--- a/drake/systems/plants/constraint/CMakeLists.txt
+++ b/drake/systems/plants/constraint/CMakeLists.txt
@@ -5,10 +5,11 @@ target_link_libraries(drakeDynamicConstraint
   drakeCommon)
 drake_install_headers(direct_collocation_constraint.h)
 pods_install_libraries(drakeDynamicConstraint)
-pods_install_pkg_config_file(drake-dynamic-constraint
+drake_install_pkg_config_file(drake-dynamic-constraint
   LIBS -ldrakeDynamicConstraint
   REQUIRES
-  VERSION 0.0.0)
+    drake-common
+    drake-system-framework)
 
 if(BUILD_TESTING)
   add_subdirectory(test)
