--- a/drake/automotive/CMakeLists.txt
+++ b/drake/automotive/CMakeLists.txt
@@ -54,10 +54,14 @@ drake_install_headers(
   trajectory_car.h
   # N.B. The gen/*.h headers are installed by gen/CMakeLists.txt.
   )
-pods_install_pkg_config_file(drake-automotive
+drake_install_pkg_config_file(drake-automotive
   LIBS -ldrakeAutomotive
   REQUIRES
-  VERSION 0.0.1)
+    drake-common
+    drake-rbsystem
+    drake-shapes
+    drake-system-analysis
+    drake-system-framework)
 
 add_subdirectory(maliput)
 
@@ -83,10 +87,11 @@ if(lcm_FOUND)
     automotive_simulator.h
     # N.B. The gen/*.h headers are installed by gen/CMakeLists.txt.
     )
-  pods_install_pkg_config_file(drake-automotive-lcm
+  drake_install_pkg_config_file(drake-automotive-lcm
     LIBS -ldrakeAutomotiveLcm
     REQUIRES
-    VERSION 0.0.1)
+      drake-automotive
+      drake-rigid-body-plant)
 
   add_executable(automotive_demo automotive_demo.cc)
   target_link_libraries(automotive_demo drakeAutomotiveLcm drakeLCMTypes)
