--- a/drake/common/CMakeLists.txt
+++ b/drake/common/CMakeLists.txt
@@ -78,10 +78,8 @@ drake_install_headers(${installed_headers})
 
 # Install the library and note Drake's dependency on it.
 pods_install_libraries(drakeCommon)
-pods_install_pkg_config_file(drake-common
-  LIBS -ldrakeCommon
-  REQUIRES
-  VERSION 0.0.1)
+drake_install_pkg_config_file(drake-common
+  LIBS -ldrakeCommon -lgflags ${CMAKE_THREAD_LIBS_INIT})
 
 if(BUILD_TESTING)
   add_subdirectory(test)
