--- a/drake/multibody/collision/CMakeLists.txt
+++ b/drake/multibody/collision/CMakeLists.txt
@@ -8,19 +8,20 @@ set(drakeCollision_SRC_FILES ${drakeCollision_SRC_FILES} unusable_model.cc)
 
 add_library_with_exports(LIB_NAME drakeCollision SOURCE_FILES ${drakeCollision_SRC_FILES})
 
+set(drakeCollision_REQUIRES)
 if(Bullet_FOUND)
   target_compile_definitions(drakeCollision PUBLIC BULLET_COLLISION)
   target_include_directories(drakeCollision PUBLIC ${BULLET_INCLUDE_DIRS})
   target_link_libraries(drakeCollision ${BULLET_LIBRARIES})
+  set(drakeCollision_REQUIRES bullet)
 endif()
 target_link_libraries(drakeCollision drakeShapes drakeCommon)
 
 pods_install_libraries(drakeCollision)
 drake_install_headers(drake_collision.h point_pair.h element.h model.h)
-pods_install_pkg_config_file(drake-collision
+drake_install_pkg_config_file(drake-collision
   LIBS -ldrakeCollision
-  REQUIRES
-  VERSION 0.0.1)
+  REQUIRES ${drakeCollision_REQUIRES})
 
 if(BUILD_TESTING)
   add_subdirectory(test)
