--- a/drake/multibody/shapes/CMakeLists.txt
+++ b/drake/multibody/shapes/CMakeLists.txt
@@ -7,7 +7,5 @@ target_link_libraries(drakeShapes spruce)
 
 pods_install_libraries(drakeShapes)
 drake_install_headers(drake_shapes.h geometry.h element.h visual_element.h)
-pods_install_pkg_config_file(drake-shapes
-  LIBS -ldrakeShapes
-  REQUIRES
-  VERSION 0.0.1)
+drake_install_pkg_config_file(drake-shapes
+  LIBS -ldrakeShapes -lspruce)
