--- a/drake/solvers/qpSpline/CMakeLists.txt
+++ b/drake/solvers/qpSpline/CMakeLists.txt
@@ -2,10 +2,9 @@ add_library_with_exports(LIB_NAME drakeSplineGeneration SOURCE_FILES splineGener
 target_link_libraries(drakeSplineGeneration drakeTrajectories)
 pods_install_libraries(drakeSplineGeneration)
 drake_install_headers(splineGeneration.h ValueConstraint.h ContinuityConstraint.h SplineInformation.h)
-pods_install_pkg_config_file(drake-spline-generation
+drake_install_pkg_config_file(drake-spline-generation
   LIBS -ldrakeSplineGeneration
-  REQUIRES
-  VERSION 0.0.2)
+  REQUIRES drake-trajectories)
 
 if(BUILD_TESTING)
   add_subdirectory(test)
