--- a/drake/systems/analysis/test/controlled_spring_mass_system/CMakeLists.txt
+++ b/drake/systems/analysis/test/controlled_spring_mass_system/CMakeLists.txt
@@ -7,10 +7,12 @@ target_link_libraries(drakeControlledSpringMassSystemPlant
 pods_install_libraries(drakeControlledSpringMassSystemPlant)
 drake_install_headers(controlled_spring_mass_system.h)
 
-pods_install_pkg_config_file(drake-controlled-spring-mass-system-plant
-    LIBS -ldrakeControlledSpringMassSystemPlant -ldrakeSpringMassSystemPlant -drakeSystemControllers -ldrakeSystemFramework
+drake_install_pkg_config_file(drake-controlled-spring-mass-system-plant
+    LIBS -ldrakeControlledSpringMassSystemPlant
     REQUIRES
-    VERSION 0.0.1)
+      drake-spring-mass-system-plant
+      drake-system-controllers
+      drake-system-framework)
 
 drake_add_cc_test(controlled_spring_mass_system_test)
 target_link_libraries(controlled_spring_mass_system_test drakeControlledSpringMassSystemPlant drakeSystemFramework)
