--- a/drake/system1/CMakeLists.txt
+++ b/drake/system1/CMakeLists.txt
@@ -21,6 +21,6 @@ if(lcm_FOUND)
   drake_install_pkg_config_file(drake-lcm-system
     LIBS -ldrakeLCMSystem
     REQUIRES
-      drake-lcm-types
+      drake-lcmtypes-cpp
       lcm)
 endif()
