--- a/drake/systems/lcm/CMakeLists.txt
+++ b/drake/systems/lcm/CMakeLists.txt
@@ -24,7 +24,7 @@ if(lcm_FOUND)
     LIBS -ldrakeLCMSystem2
     REQUIRES
       drake-lcm
-      drake-lcm-types
+      drake-lcmtypes-cpp
       drake-system-framework)
 endif()
 
